[b]Version 0.5.63 (not released yet)[/b]:

(2007-12-08)
 * Added a new option for the config file: use_volume_option. If set to 
   true, smplayer will set the initial volume using the command line option
   -volume in mplayer, so that should avoid that the volume is too loud on
   startup. But... mplayer doesn't have a -volume option yet, you have to
   patch it:
   http://lists.mplayerhq.hu/pipermail/mplayer-users/2007-December/070500.html

(2007-12-05)
 * (By user request) Added a new option for the config file: 
   auto_add_to_playlist. If true, new opened files are added automatically to
   the playlist (this is the default). Otherwise the playlist won't be 
   modified unless it's strictly necessary (play a dvd, vcd, audiocd, or
   several files are opened at the same time).

(2007-12-04)
 * When a file has stopped, the screensaver won't be allowed to run until
   an additional minute has passed, so it there are more files in the
   playlist they have time to start. A minute should be enough even for
   internet streams.

(2007-11-29)
 * Now the cache setting is independent for each type of media. That means
   that you can disable cache for local files (faster startup) while keeping
   a cache for internet streams.
   The following options for the config file have been added: cache_for_files,
   cache_for_streams, cache_for_dvds, cache_for_audiocds and cache_for_vcds
   (the last two untested).
   The section Performance in the preferences dialog has been changed too,
   adding options for cache for files, cache for streams and cache for dvds.
   Note: it's not recommended to set a cache for DVDs, seeking might not work
   properly.

(2007-11-28)
 * Added a new experimental code to disable the screensaver (and monitor
   turning off) on Windows.
 * Deleted the old (ancient) code for subtitle management.
 
(2007-11-27)
 * If mplayer is compiled with gui support, it seems pause may not work 